# simpleiso3166

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  generate.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/simpleiso3166/: __about__.py  __init__.py  _compat.py  aliases.py  base.py  errors.py
src/simpleiso3166/countries/: __init__.py  data.py  types.py
src/simpleiso3166/countries/data/: __init__.py  countries.py  mapping.py  types.py
src/simpleiso3166/subdivisions/: __init__.py  types.py
src/simpleiso3166/subdivisions/data/: AD.py  AE.py  AF.py  AG.py  AI.py  AL.py  AM.py  AO.py  AQ.py  AR.py  AS.py  AT.py  AU.py  AW.py  AX.py  AZ.py  BA.py  BB.py  BD.py  BE.py  BF.py  BG.py  BH.py  BI.py  BJ.py  BL.py  BM.py  BN.py  BO.py  BQ.py  BR.py  BS.py  BT.py  BV.py  BW.py  BY.py  BZ.py  CA.py  CC.py  CD.py  (+210 more)
tests/: test_country_basic.py  test_country_searching.py  test_subdivision.py
